--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,17 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/Theme.MovieApp">
-        <activity android:name=".DetailActivity">
+        <activity android:name=".views.TvDetailActivity"
+                  android:parentActivityName=".views.MainActivity">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value=".views.MainActivity"/>
+        </activity>
+        <activity android:name=".views.MovieDetailActivity"
+                  android:parentActivityName=".views.MainActivity">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value=".views.MainActivity"/>
         </activity>
         <activity android:name=".views.MainActivity">
             <intent-filter>
