--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,5 @@ dependencies {
     androidTestImplementation "androidx.test:rules:$androidTestVersion"
     androidTestImplementation "androidx.test.ext:junit:$junitExtversion"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:$espressoVersion"
+    testImplementation 'android.arch.core:core-testing:1.1.1'
 }
