--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,10 @@ buildscript {
     ext.kotlin_version = "1.4.32"
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.3"
+        classpath 'com.android.tools.build:gradle:7.0.0-alpha15'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -24,6 +24,7 @@ ext {
     espressoVersion = '3.3.0'
     androidTestVersion = '1.3.0'
     androidXTestVersion = '1.2.0'
+    idleResourceVersion = '3.3.0'
 
     materialVersion = '1.3.0'
     recyclerViewVersion = '1.2.0'
@@ -33,7 +34,7 @@ ext {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
