--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,5 +68,8 @@ dependencies {
     androidTestImplementation "androidx.test:rules:$androidTestVersion"
     androidTestImplementation "androidx.test.ext:junit:$junitExtversion"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:$espressoVersion"
+    testImplementation "org.mockito:mockito-core:3.8.0"
+    testImplementation "org.mockito:mockito-inline:3.6.0"
+    testImplementation "org.mockito.kotlin:mockito-kotlin:3.1.0"
     testImplementation 'android.arch.core:core-testing:1.1.1'
 }
