--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,7 @@
                     android:name="android.support.PARENT_ACTIVITY"
                     android:value=".views.MainActivity"/>
         </activity>
-        <activity android:name=".views.MovieDetailActivity"
-                  android:parentActivityName=".views.MainActivity">
+        <activity android:name=".views.MovieDetailActivity">
             <meta-data
                     android:name="android.support.PARENT_ACTIVITY"
                     android:value=".views.MainActivity"/>
