--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
 
     //DB
     implementation 'androidx.room:room-runtime:2.3.0'
+    //noinspection GradleDependency
     implementation 'androidx.paging:paging-runtime-ktx:2.1.1'
     implementation 'junit:junit:4.13.2'
     kapt 'androidx.room:room-compiler:2.3.0'
@@ -79,6 +80,7 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$junitExtversion"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:$espressoVersion"
     androidTestImplementation 'androidx.room:room-testing:2.3.0'
+    androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
     testImplementation "org.mockito:mockito-core:3.10.0"
     testImplementation "org.mockito:mockito-inline:3.10.0"
     testImplementation "org.mockito.kotlin:mockito-kotlin:3.2.0"
