--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 buildscript {
     ext.kotlin_version = "1.5.0"
+    ext.kotlin_coroutines_version = "1.3.9"
+    ext.lifecycle_version = "2.2.0"
     repositories {
         google()
         mavenCentral()
