--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,11 @@ plugins {
     id 'kotlin-parcelize'
 }
 
+
+def localPropertiesFile = rootProject.file("local.properties")
+def localProperties = new Properties()
+localProperties.load(new FileInputStream(localPropertiesFile))
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -15,7 +20,7 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
+        buildConfigField('String', 'MOVIE_TOKEN', localProperties['tmdbApiKey'])
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -38,29 +43,31 @@ android {
 }
 
 dependencies {
-    //kotlin
+    // Core
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "androidx.core:core-ktx:1.5.0"
-    implementation "androidx.room:room-ktx:2.3.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
 
-    //API
+    // API
     implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-    //DB
+    // DB
     implementation 'androidx.room:room-runtime:2.3.0'
-    //noinspection GradleDependency
-    implementation 'androidx.paging:paging-runtime-ktx:2.1.1'
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
-    implementation 'junit:junit:4.13.2'
+    implementation "androidx.room:room-ktx:2.3.0"
     kapt 'androidx.room:room-compiler:2.3.0'
     kapt "org.xerial:sqlite-jdbc:3.34.0"
 
-    //ui
+    // DI
+    implementation "io.insert-koin:koin-core:3.0.2"
+    implementation "io.insert-koin:koin-android:3.0.2"
+    implementation "io.insert-koin:koin-android-viewmodel:2.1.6"
+
+    // UI
     implementation "androidx.appcompat:appcompat:1.3.0"
     implementation "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion"
     implementation "androidx.recyclerview:recyclerview:$recyclerViewVersion"
@@ -72,9 +79,13 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
 
-    //testing
+    // Testing
     implementation "androidx.test.espresso:espresso-idling-resource:$idleResourceVersion"
-    testImplementation "junit:junit:$junitVersion"
+    testImplementation "junit:junit:4.13.2"
+    testImplementation "org.mockito:mockito-core:3.10.0"
+    testImplementation "org.mockito:mockito-inline:3.10.0"
+    testImplementation "org.mockito.kotlin:mockito-kotlin:3.2.0"
+    testImplementation 'android.arch.core:core-testing:1.1.1'
     androidTestImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espressoVersion"
     androidTestImplementation "androidx.test:runner:$androidTestVersion"
@@ -83,8 +94,4 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-contrib:$espressoVersion"
     androidTestImplementation 'androidx.room:room-testing:2.3.0'
     androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
-    testImplementation "org.mockito:mockito-core:3.10.0"
-    testImplementation "org.mockito:mockito-inline:3.10.0"
-    testImplementation "org.mockito.kotlin:mockito-kotlin:3.2.0"
-    testImplementation 'android.arch.core:core-testing:1.1.1'
 }
