--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,7 @@ dependencies {
     // DI
     implementation "io.insert-koin:koin-core:3.0.2"
     implementation "io.insert-koin:koin-android:3.0.2"
-    implementation "io.insert-koin:koin-android-viewmodel:2.1.6"
+//    implementation "io.insert-koin:koin-androidx-viewmodel:3.0.2"
 
     // UI
     implementation "androidx.appcompat:appcompat:1.3.0"
