--- a/shared_dependencies.gradle
+++ b/shared_dependencies.gradle
@@ -28,4 +28,6 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     implementation "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion"
     implementation 'androidx.cardview:cardview:1.0.0'
+    implementation "androidx.appcompat:appcompat:1.3.0"
+    implementation "com.google.android.material:material:$materialVersion"
 }
