--- a/shared_dependencies.gradle
+++ b/shared_dependencies.gradle
@@ -30,4 +30,7 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation "androidx.appcompat:appcompat:1.3.0"
     implementation "com.google.android.material:material:$materialVersion"
+
+    // Performance check
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.4'
 }
