--- a/shared_dependencies.gradle
+++ b/shared_dependencies.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation "androidx.appcompat:appcompat:1.3.0"
     implementation "com.google.android.material:material:$materialVersion"
+    kapt 'com.github.bumptech.glide:compiler:4.8.0'
 
     // Performance check
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.4'
